# some

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MANUAL.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  config.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom-template.md  custom_template.md  feature_request.md  other.md
.github/workflows/: release.yml
assets/themes/: Catppuccin-Mocha.tmTheme  Dracula.tmTheme  Monokai.tmTheme  Nord.tmTheme
config/: config.toml.example
src/: app.rs  buffer.rs  cli.rs  config.rs  input.rs  keymap.rs  line_numbers.rs  main.rs  search.rs  statusbar.rs  syntax.rs  viewer.rs
